--- a/pohadka.html
+++ b/pohadka.html
@@ -52,6 +52,19 @@ padding-left: 2.5rem;}
         padding-left: 2.5rem;
         font-family: Arial,sans-serif;
   }
+  blockquote { 
+font-family: Arial,sans-serif }
+
+footer, body, section {
+  margin-top: 10px;
+}
+
+li, ul {font-size: 1rem;
+    line-height: 1.5rem;}
+
+
+
+
 
   </style>
 
