--- a/pohadka.html
+++ b/pohadka.html
@@ -19,7 +19,6 @@
     max-height: 10%;
     margin: auto;
 }
-
 .zanr {
   font-size: 2.5rem;
     font-weight: 400;
@@ -54,25 +53,23 @@ padding-left: 2.5rem;}
   }
   blockquote { 
 font-family: Arial,sans-serif }
-
 footer, body, section {
   margin-top: 10px;
 }
-
 li, ul {font-size: 1rem;
     line-height: 1.5rem;}
-
-
-
-
-
   </style>
 
 </head>
 <body>
 <img src="http://www.imagehosting.cz/thumbs/lssdv.png" class="obr">
   <div class="content">
+<input type="search" class="mol-search-input" data-dot-data="{&quot;action&quot;:&quot;search&quot;}" data-e2e="mol-search-input" name="q" placeholder="Hledat zprávy" value="" data-reactid="23">
+
+<ul class="atm-list atm-list-ul ogm-vertical-section-menu-sections" data-reactid="36"><li class="atm-li ogm-vertical-section-menu-active el-primary-color el-primary-color-hover" data-reactid="37"><a href="https://www.seznam.cz/zpravy" class="atm-link el-primary-color el-primary-color-hover" data-dot-data="{&quot;click&quot;:&quot;Vše&quot;}" data-reactid="38">Vše</a></li><li class="atm-li" data-dot-data="{&quot;click&quot;:&quot;section-Domácí&quot;}" data-reactid="39"><a href="https://www.seznam.cz/zpravy/sekce/domaci" class="atm-link el-primary-color el-primary-color-hover" data-reactid="40">Domácí</a></li><li class="atm-li" data-dot-data="{&quot;click&quot;:&quot;section-Zahraniční&quot;}" data-reactid="41"><a href="https://www.seznam.cz/zpravy/sekce/zahranicni" class="atm-link el-primary-color el-primary-color-hover" data-reactid="42">Zahraniční</a></li><li class="atm-li" data-dot-data="{&quot;click&quot;:&quot;section-Rozhovory&quot;}" data-reactid="43"><a href="https://www.seznam.cz/zpravy/sekce/rozhovory" class="atm-link el-primary-color el-primary-color-hover" data-reactid="44">Rozhovory</a></li><li class="atm-li" data-dot-data="{&quot;click&quot;:&quot;section-Večerní zprávy&quot;}" data-reactid="45"><a href="https://www.seznam.cz/zpravy/sekce/vecerni-zpravy" class="atm-link el-primary-color el-primary-color-hover" data-reactid="46">Večerní zprávy</a></li><li class="atm-li" data-dot-data="{&quot;click&quot;:&quot;section-Šídlo&quot;}" data-reactid="47"><a href="https://www.seznam.cz/zpravy/sekce/stastne-pondeli" class="atm-link el-primary-color el-primary-color-hover" data-reactid="48">Šídlo</a></li><li class="atm-li" data-dot-data="{&quot;click&quot;:&quot;section-Slonková, Kubík&quot;}" data-reactid="49"><a href="https://www.seznam.cz/zpravy/sekce/zvlastni-vysetrovani" class="atm-link el-primary-color el-primary-color-hover" data-reactid="50">Slonková, Kubík</a></li></ul>
+
     <header>
+
       <p class="zanr">Pohádka</p>
     
       <h1>O chytrém ševci a hloupém čertovi</h1>
